--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 }
 
 .carousel-img {
-    height:39dvw;
-    object-fit: cover;
+  height:39dvw;
+  object-fit: cover;
 }
 
 #KTM{
@@ -36,8 +36,8 @@ a {
 }
 
 footer {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 .card{
   height: 50vh;
@@ -56,8 +56,13 @@ footer {
 }
 
 img.ktm {
- border-radius: 2em;
+  border-radius: 2em;
 }
 
+.rounded-circle.img{
+  width: 7em; 
+  height: 7em; 
+  object-fit: cover;
+}
 
 
